--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,30 +1,27 @@
 {
   "name": "backend",
+  "private": true,
   "version": "1.0.0",
-  "description": "Backend for leprofdetechno",
-  "main": "dist/main.js",
   "scripts": {
-    "start": "node dist/main.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "build": "tsc -p tsconfig.build.json"
+    "dev": "nest start --watch",
+    "start": "nest start",
+    "build": "nest build"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.13.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0"
+    "bcryptjs": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "prisma": "^6.13.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/node": "^20.0.0",
-    "prisma": "^6.13.0",
-    "ts-node": "^10.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "@nestjs/cli": "^10.4.9",
+    "typescript": "^5.9.2"
   }
 }
