--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,19 +3,16 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0"
-  },
-  "dependencies": {
+    "@types/react": "^19.1.9",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }  
+  }
 }
